# HanaYomi

./: .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md  clickable.yaml  hanayomi.apparmor  hanayomi.desktop  manifest.json
qml/: Main.qml
qml/pages/: BrowsePage.qml  ExtensionStoresPage.qml  LibraryPage.qml  MangaDetailPage.qml  MorePage.qml  ReaderPage.qml  SettingsPage.qml  TrackingSettingsPage.qml
qml/scrapers/: eu.kanade.tachiyomi.extension.ar.mangatales.js  eu.kanade.tachiyomi.extension.id.cosmicscansid.js  eu.kanade.tachiyomi.extension.id.kiryuu.js  eu.kanade.tachiyomi.extension.id.klikmanga.js  eu.kanade.tachiyomi.extension.id.komikcast.js  eu.kanade.tachiyomi.extension.id.komikucom.js  eu.kanade.tachiyomi.extension.id.shinigami.js  eu.kanade.tachiyomi.extension.id.westmanga.js
src/: DatabaseHelper.cpp  DatabaseHelper.h  MangaDexSource.cpp  MangaDexSource.h  SuwayomiRunner.cpp  SuwayomiRunner.h  main.cpp
src/models/: Chapter.h  HistoryEntry.h  Manga.h
suwayomi-lib/: js-community-25.0.3.pom
